Fix report-a-problem styling
When slimmer was bumped beyond v5.0.0, the div and styles for
the report-a-problem form weren't removed, meaning that the form
is misaligned.

This commit removes report-a-problem related code and leaves the
form to be completely presented by slimmer/static.

--- a/app/assets/stylesheets/helpers/_layouts.scss
+++ b/app/assets/stylesheets/helpers/_layouts.scss
@@ -5,14 +5,4 @@
     display: block;
     @include outer-block;
   }
-
-  .report-a-problem-toggle {
-    @include core-16;
-    @include inner-block;
-    margin-bottom: $gutter;
-
-    a {
-      color: $secondary-text-colour;
-    }
-  }
 }
